--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,25 @@
 	<title>LUCKYCHAIN - Trust protocol for decentralized competitive environments</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+	<link rel="apple-touch-icon" sizes="57x57" href="./images/favicon/apple-touch-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="./images/favicon/apple-touch-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="./images/favicon/apple-touch-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="./images/favicon/apple-touch-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="./images/favicon/apple-touch-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="./images/favicon/apple-touch-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="./images/favicon/apple-touch-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="./images/favicon/apple-touch-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="167x167" href="./images/favicon/apple-touch-icon-ipad-retina.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="./images/favicon/apple-touch-icon-iphone-retina.png">
+
+	<link rel="icon" type="image/png" sizes="196x196" href="./images/favicon/favicon-196x196.png">
+	<link rel="icon" type="image/png" sizes="160x160" href="./images/favicon/favicon-160x160.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="./images/favicon/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png">
+
+	<meta name="msapplication-TileImage" content="./images/favicon/mstile-144x144.png">
+
 	<link rel="stylesheet" href="./js/slick/slick.css">
 	<link rel="stylesheet" href="./js/slick/slick-theme.css">
 	<link rel="stylesheet" href="css/style.min.css">
